// Copyright 2021 Google LLC. All Rights Reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//    http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package google.cloud.apigee.registry.applications.v1alpha1;

option java_package = "com.google.cloud.apigee.registry.applications.v1alpha1";
option java_multiple_files = true;
option java_outer_classname = "RegistryReferencesProto";
option go_package = "github.com/apigee/registry/rpc;rpc";

// References represents the external and available references of an API spec.
// (-- api-linter: core::0123::resource-annotation=disabled
//     aip.dev/not-precedent: This message is not currently used in an API. --)
message References {
  // External references are the names (typically paths) used in an
  // API spec that are not defined in the spec.
  repeated string external_references = 1;

  // Available references are the names (paths) in the spec that can be referenced
  // by other specs. 
  repeated string available_references = 2;
}
